fixed overflow on main

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
   background-color: #fafafa;
   font-family: "Poppins", sans-serif !important;
 }
+main{
+  overflow-x: hidden;
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -59,8 +62,8 @@ li .btn {
   padding: 50px 0 20px;
 }
 button.navbar-toggler {
-  border: none !important;
-  outline: 0 !important;
+  /* border: none !important; */
+  /* outline: 0 !important; */
 }
 
 header {
@@ -90,6 +93,7 @@ header {
   color: white !important;
   cursor: pointer;
 }
+
 .header-text {
   font-family: "Lato", sans-serif !important;
 }
@@ -340,11 +344,13 @@ footer a:hover {
 .attribution {
   font-size: 0.65rem;
 }
+
 @media screen and (min-width: 320px) and (max-width: 360px) {
   .try-buycoin-btn {
     padding: 10px 15px;
   }
 }
+
 @media screen and (min-width: 768px) {
   header h1 {
     font-size: 3.5rem;
@@ -480,6 +486,7 @@ footer a:hover {
   }
 }
 @media screen and (min-width: 1030px) and (max-width: 1370px) {
+
   .get-started-img-con,
   .try-buycoin-img-con,
   .try-buycoin-pro-img-con {
